Update about me section

--- a/index.html
+++ b/index.html
@@ -55,8 +55,13 @@
 						Interested in full stack web development and mobile app development.
 					</p>
 					<p>
-						Also avid speedcuber with <a href="https://www.worldcubeassociation.org/persons/2014wong08?tab=championship-podiums">podiums</a> 
-						in Australian championships.
+						Occasional <a href="https://vwong.dev/blog/">blogger</a> with posts 
+						about various aspects of <a href="https://vwong.dev/blog/tags.html">computer science</a>.
+					</p>
+					<p>
+						Also avid <a href="https://www.worldcubeassociation.org/persons/2014WONG08">speedcuber</a> 
+						with Australian championship
+						<a href="https://www.worldcubeassociation.org/persons/2014wong08?tab=championship-podiums">podiums</a>.
 					</p>
 				</blockquote>
 			</header>
