Add website name on page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<body>
 		<div class="container">
 			<header class="profile">
-				<h1>Vincent Wong</h1>
+				<h1>Vincent Wong (VWong)</h1>
 				<h2>Aspiring Web Developer</h2>
 				<nav class="links-container">
 					<div class="link-container">
@@ -390,7 +390,7 @@
 				</div>
 			</section>
 			<footer>
-				<p>Copyright © 2020 Vincent Wong</p>
+				<p>Copyright © 2020 Vincent Wong (VWong)</p>
 				<p><a href="mailto:v.wong168@outlook.com">Looking for software roles. Email me :)</a></p>
 			</footer>
 		</div>
