Remove horizontal dividers

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				</blockquote>
 			</header>
 
-			<h2>Collaborative Projects</h2>
+			<h2>COLLABORATIVE PROJECTS</h2>
 			<hr>
 			<section class="single-column">
 				<div class="card">
@@ -109,7 +109,7 @@
 				</div>
 			</section>
 
-			<h2 style="margin-top: 2vh;">Personal Projects</h2>
+			<h2 style="margin-top: 2vh;">PERSONAL PROJECTS</h2>
 			<hr>
 			<section class="two-column">
 				<div class="card">
@@ -235,7 +235,7 @@
 				</div>
 			</section>
 
-			<h2 id="extracurriculars">Extracurriculars</h2>
+			<h2 id="extracurriculars">EXTRACURRICULARS</h2>
 			<hr>
 			<section class="single-column">
 				<div class="card">
@@ -275,7 +275,7 @@
 				</div>
 			</section>
 
-			<h2 style="margin-top: 2vh;">Skillset</h2>
+			<h2 style="margin-top: 2vh;">SKILLSET</h2>
 			<hr>
 			<section class="two-column">
 				<div class="card" style="padding-bottom: 2%;">
@@ -335,7 +335,7 @@
 				</div>
 			</section>
 
-			<h2 style="margin-top: 2vh;">Algorithmic Interests</h2>
+			<h2 style="margin-top: 2vh;">ALGORITHMIC INTERESTS</h2>
 			<hr>
 			<section class="two-column">
 				<div class="card">
