--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				</blockquote>
 			</header>
 
-			<h2>COLLABORATIVE PROJECTS</h2>
+			<h2 style="margin-top: 5px;">COLLABORATIVE PROJECTS</h2>
 			<hr>
 			<section class="single-column">
 				<div class="card">
