--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 				<div class="card">
 					<h3>CubeSim</h3>
 					<h4 class="project-subheading">Rubiks Cube Simulation and Solving Program</h4>
-					<a class="repo-link" href="https://github.com/V-Wong/CubeSim">Respository</a>
+					<a class="repo-link" href="https://github.com/V-Wong/CubeSim">Repository</a>
 					<img class="image" src="./images/cube.webp"
 						alt="2D rendering of a Rubiks cube">
 					<ul>
@@ -143,7 +143,7 @@
 					<h3>Huffman Encoding</h3>
 					<h4 class="project-subheading">Huffman Encoding Visualisation Tool</h4>
 					<a class="demo-link" href="https://v-wong.github.io/Huffman-Encoding">Live Demo</a>
-					<a class="repo-link" href="https://github.com/V-Wong/Huffman-Encoding">Respository</a>
+					<a class="repo-link" href="https://github.com/V-Wong/Huffman-Encoding">Repository</a>
 					<img class="image" srcset="./images/huffman_mobile.webp 750w, ./images/huffman_small.webp 1600w"
 					 sizes="750w, (min-size: 1000px) 1600w"
 					 src="./images/huffman.webp"
@@ -207,7 +207,7 @@
 				<div class="card">
 					<h3>Study Helper (WIP)</h3>
 					<h4 class="project-subheading">Google Docs Flashcard Generation</h4>
-					<a class="repo-link" href="https://github.com/V-Wong/Study-Helper">Respository</a>
+					<a class="repo-link" href="https://github.com/V-Wong/Study-Helper">Repository</a>
 					<img class="image" srcset="./images/study_helper_mobile.webp 750w, ./images/study_helper_small.webp 1600w"
 					 sizes="750w, (min-size: 1000px) 1600w"
 					 src="./images/study_helper.webp"
@@ -341,7 +341,7 @@
 				<div class="card">
 					<h3>COMP3821</h3>
 					<h4 class="project-subheading">Extended Algorithms and Programming Techniques</h4>
-					<a class="repo-link" href="https://github.com/V-Wong/COMP3821">Respository</a>
+					<a class="repo-link" href="https://github.com/V-Wong/COMP3821">Repository</a>
 					<ul>
 						<li>
 							Explained implementations of algorithms in Python.
@@ -367,7 +367,7 @@
 					<h3>LeetCode</h3>
 					<h4 class="project-subheading">Competitive Programming</h4>
 					<a class="demo-link" href="https://leetcode.com/v-wong/">LeetCode Profile</a>
-					<a class="repo-link" href="https://github.com/V-Wong/LeetCode-Practice">Respository</a>
+					<a class="repo-link" href="https://github.com/V-Wong/LeetCode-Practice">Repository</a>
 					<ul>
 						<li>
 							Explained Python solutions to various problems.
