Increase size of main margin

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 							Generates a Huffman tree based on user symbol input.
 						</li>
 						<li>
-							Traceback of encoding path drawn when a symbol is selected.
+							Traceback of encoding path drawn when symbol is selected.
 						</li>
 						<li>
 							Built in Javascript with HTML5 Canvas for visuals.
@@ -188,7 +188,7 @@
 							Includes chatrooms for users to discuss their solves in.
 						</li>
 						<li>
-							Typescript + React frontend. Python + Flask-SocketIO backend.
+							Typescript + React frontend. Flask-SocketIO backend.
 						</li>
 					</ul>
 					<div class="tags">
@@ -215,13 +215,13 @@
 				   	>
 					<ul>
 						<li>
-							Using Google Docs API to parse documents into learning resources.
+							Using Google Docs API to parse documents into flashcards.
 						</li>
 						<li>
 							Includes quizing functionality and statistical tracking.
 						</li>
 						<li>
-							Javascript + React + Bootstrap frontend. Python + Flask backend.
+							React + Bootstrap frontend. Python + Flask backend.
 						</li>
 					</ul>
 					<div class="tags">
