--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		-->
 	
 		<title>Portfolio | Vincent Wong - Aspiring Web Developer</title>
-		<meta name="Description" content="Aspiring full stack web developer based in Sydney, Australia
-										  with experience in React, Typescript and Python-Flask.
+		<meta name="description" content="Aspiring full stack web developer based in Sydney, Australia.
 										  Current student of Computer Science and Mathematics at UNSW.">
+
 		<meta name="author" content="Vincent Wong">
 		<meta name="keywords" content="vwong, VWong, v-wong, V-Wong">
 		<link rel="icon" type="image/x-icon" href="./images/favicon.ico">
