Update contact email

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 			</section>
 			<footer>
 				<p>Copyright © 2020 Vincent Wong (VWong)</p>
-				<p><a href="mailto:v.wong168@outlook.com">Looking for software roles. Email me :)</a></p>
+				<p><a href="mailto:vincent@vwong.dev">Looking for software roles. Email me :)</a></p>
 			</footer>
 		</div>
 	
