--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div class="container">
 			<header class="profile">
 				<h1>Vincent Wong</h1>
-				<h2>Aspiring Web Developer</h2>
+				<h2>Aspiring Full Stack Web Developer</h2>
 				<nav class="links-container">
 					<div class="link-container">
 						<img src="./images/github.svg" alt="Black and white GitHub logo icon">
@@ -294,13 +294,13 @@
 					<h4 class="project-subheading">Backend</h4>
 					<ul style="margin-top: 1vh;">
 						<li>
-							<b>Languages</b>: Python.
+							<b>Languages</b>: Python, Javascript, Typescript.
 						</li>
 						<li>
-							<b>Frameworks and Libraries</b>: Flask, SocketIO.
+							<b>Frameworks and Libraries</b>: Flask, Express.js, SocketIO.
 						</li>
 						<li>
-							<b>Other</b>: SQL (PL/SQL), MongoDB. 
+							<b>Other</b>: SQL (PL/SQL), MongoDB.
 						</li>
 					</ul>
 				</div>
