Update LinkUp project subheading

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<div class="card">
 					<div class="description">
 						<h3>LinkUp - Australian University Event Tracker</h3>
-						<h4 class="project-subheading">Frontend Developer</h4>
+						<h4 class="project-subheading">Full Stack Developer</h4>
 						<a class="demo-link" href="https://linkup.website/">Live Demo</a>
 					</div>
 					<div class="image-container">
@@ -103,6 +103,9 @@
 						</span>
 						<span class="tag">
 							<a href="https://getbootstrap.com/">Bootstrap</a>
+						</span>
+						<span class="tag">
+							<a href="https://expressjs.com/">Express.js</a>
 						</span>
 					</div>
 				</div>
