Update about me

--- a/index.html
+++ b/index.html
@@ -48,14 +48,10 @@
 				</nav>
 				<blockquote class="about-me">
 					<p>
-						Student of Computer Science and Mathematics at UNSW in Sydney.
+						Computer Science and Mathematics student at UNSW in Sydney.
 					</p>
 					<p>
 						Interested in full stack web development and mobile app development.
-					</p>
-					<p>
-						Occasional <a href="https://vwong.dev/blog/">blogger</a> with posts 
-						about various aspects of <a href="https://vwong.dev/blog/tags.html">computer science</a>.
 					</p>
 					<p>
 						Also avid <a href="https://www.worldcubeassociation.org/persons/2014WONG08">speedcuber</a> 
