Fix margin between sections

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				</blockquote>
 			</header>
 
-			<h2 style="margin-top: 5px;">COLLABORATIVE PROJECTS</h2>
+			<h2 class="section-heading">COLLABORATIVE PROJECTS</h2>
 			<hr>
 			<section class="single-column">
 				<div class="card">
@@ -107,7 +107,7 @@
 				</div>
 			</section>
 
-			<h2 style="margin-top: 2vh;">PERSONAL PROJECTS</h2>
+			<h2 class="section-heading">PERSONAL PROJECTS</h2>
 			<hr>
 			<section class="two-column">
 				<div class="card">
@@ -169,7 +169,7 @@
 				</div>
 			</section>
 
-			<h2 id="extracurriculars">EXTRACURRICULARS</h2>
+			<h2 class="section-heading">EXTRACURRICULARS</h2>
 			<hr>
 			<section class="single-column">
 				<div class="card">
@@ -209,7 +209,7 @@
 				</div>
 			</section>
 
-			<h2 style="margin-top: 2vh;">SKILLSET</h2>
+			<h2 class="section-heading">SKILLSET</h2>
 			<hr>
 			<section class="two-column">
 				<div class="card" style="padding-bottom: 2%;">
@@ -269,7 +269,7 @@
 				</div>
 			</section>
 
-			<h2 style="margin-top: 2vh;">ALGORITHMIC INTERESTS</h2>
+			<h2 class="section-heading">ALGORITHMIC INTERESTS</h2>
 			<hr>
 			<section class="two-column">
 				<div class="card">
