Open links in new tab

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 				<nav class="links-container">
 					<div class="link-container">
 						<img src="./images/github.svg" alt="Black and white GitHub logo icon">
-						<a href="https://github.com/V-Wong">Github</a>
+						<a href="https://github.com/V-Wong" target="_blank">Github</a>
 					</div>
 					<div class="link-container">
 						<img src="./images/resume.svg" alt="Black and white icon with silhouette of person">
-						<a href="https://drive.google.com/file/d/1mqRF7QdBDXfDD7TLQ3OuanALxHxd_D2f/view?usp=sharing">Resume</a>
+						<a href="https://drive.google.com/file/d/1mqRF7QdBDXfDD7TLQ3OuanALxHxd_D2f/view?usp=sharing" target="_blank">Resume</a>
 					</div>
 					<div class="link-container">
 						<img src="./images/linkedin.svg" alt="Black and white LinkIn logo icon">
-						<a href="https://www.linkedin.com/in/vincent-wc-wong/">LinkedIn</a>
+						<a href="https://www.linkedin.com/in/vincent-wc-wong/" target="_blank">LinkedIn</a>
 					</div>
 					<div id="dark-theme-button" class="link-container">
 						<img src="./images/moon.svg" alt="Black and white moon icon">
@@ -54,9 +54,9 @@
 						Interested in full stack web development and mobile app development.
 					</p>
 					<p>
-						Also avid <a href="https://www.worldcubeassociation.org/persons/2014WONG08">speedcuber</a> 
+						Also avid <a href="https://www.worldcubeassociation.org/persons/2014WONG08" target="_blank">speedcuber</a> 
 						with Australian championship
-						<a href="https://www.worldcubeassociation.org/persons/2014wong08?tab=championship-podiums">podiums</a>.
+						<a href="https://www.worldcubeassociation.org/persons/2014wong08?tab=championship-podiums" target="_blank">podiums</a>.
 					</p>
 				</blockquote>
 			</header>
@@ -68,7 +68,7 @@
 					<div class="description">
 						<h3>LinkUp - Australian University Event Tracker</h3>
 						<h4 class="project-subheading">Full Stack Developer</h4>
-						<a class="demo-link" href="https://linkup.website/">Live Demo</a>
+						<a class="demo-link" href="https://linkup.website/" target="_blank">Live Demo</a>
 					</div>
 					<div class="image-container">
 						<img class="image" src="./images/linkup.svg"
@@ -95,13 +95,13 @@
 					</div>
 					<div class="tags">
 						<span class="tag">
-							<a href="https://reactjs.org/">React</a>
+							<a href="https://reactjs.org/" target="_blank">React</a>
 						</span>
 						<span class="tag">
-							<a href="https://getbootstrap.com/">Bootstrap</a>
+							<a href="https://getbootstrap.com/" target="_blank">Bootstrap</a>
 						</span>
 						<span class="tag">
-							<a href="https://expressjs.com/">Express.js</a>
+							<a href="https://expressjs.com/" target="_blank">Express.js</a>
 						</span>
 					</div>
 				</div>
@@ -113,7 +113,7 @@
 				<div class="card">
 					<h3>CubeSim</h3>
 					<h4 class="project-subheading">Rubiks Cube Simulation and Solving Program</h4>
-					<a class="repo-link" href="https://github.com/V-Wong/CubeSim">Repository</a>
+					<a class="repo-link" href="https://github.com/V-Wong/CubeSim" target="_blank">Repository</a>
 					<img class="image" src="./images/cube.webp"
 						alt="2D rendering of a Rubiks cube">
 					<ul>
@@ -129,10 +129,10 @@
 					</ul>
 					<div class="tags">
 						<span class="tag">
-							<a href="https://www.python.org/">Python</a>
+							<a href="https://www.python.org/" target="_blank">Python</a>
 						</span>
 						<span class="tag">
-							<a href="https://www.pygame.org/news">Pygame</a>
+							<a href="https://www.pygame.org/news" target="_blank">Pygame</a>
 						</span>
 					</div>
 				</div>
@@ -140,8 +140,8 @@
 				<div class="card">
 					<h3>Huffman Encoding</h3>
 					<h4 class="project-subheading">Huffman Encoding Visualisation Tool</h4>
-					<a class="demo-link" href="https://v-wong.github.io/Huffman-Encoding">Live Demo</a>
-					<a class="repo-link" href="https://github.com/V-Wong/Huffman-Encoding">Repository</a>
+					<a class="demo-link" href="https://v-wong.github.io/Huffman-Encoding" target="_blank">Live Demo</a>
+					<a class="repo-link" href="https://github.com/V-Wong/Huffman-Encoding" target="_blank">Repository</a>
 					<img class="image" srcset="./images/new_huffman_mobile.webp 750w, ./images/new_huffman_small.webp 1600w"
 					 sizes="750w, (min-size: 1000px) 1600w"
 					 src="./images/new_huffman.webp"
@@ -160,10 +160,10 @@
 					</ul>
 					<div class="tags">
 						<span class="tag">
-							<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">Javascript</a>
+							<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">Javascript</a>
 						</span>
 						<span class="tag">
-							<a href="https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API">Canvas</a>
+							<a href="https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API" target="_blank">Canvas</a>
 						</span>
 					</div>
 				</div>
@@ -176,7 +176,7 @@
 					<div class="description">
 						<h3>UNSW Rubik Society</h3>
 						<h4 class="project-subheading">Executive - Events Director</h4>
-						<a class="demo-link" href="https://www.facebook.com/UNSWRubikSoc/">Society Page</a>
+						<a class="demo-link" href="https://www.facebook.com/UNSWRubikSoc/" target="_blank">Society Page</a>
 					</div>
 					<div class="image-container">
 						<img class="image" src="./images/rubiksoc_small.webp" 
@@ -200,10 +200,10 @@
 					</div>
 					<div class="tags">
 						<span class="tag">
-							<a href="https://www.rubiks.com/en-us/">Rubiks Cubes</a>
+							<a href="https://www.rubiks.com/en-us/" target="_blank">Rubiks Cubes</a>
 						</span>
 						<span class="tag">
-							<a href="https://www.worldcubeassociation.org/">Speedcubing</a>
+							<a href="https://www.worldcubeassociation.org/" target="_blank">Speedcubing</a>
 						</span>
 					</div>
 				</div>
@@ -275,7 +275,7 @@
 				<div class="card">
 					<h3>COMP3821</h3>
 					<h4 class="project-subheading">Extended Algorithms and Programming Techniques</h4>
-					<a class="repo-link" href="https://github.com/V-Wong/COMP3821">Repository</a>
+					<a class="repo-link" href="https://github.com/V-Wong/COMP3821" target="_blank">Repository</a>
 					<ul>
 						<li>
 							Explained implementations of algorithms in Python.
@@ -289,10 +289,10 @@
 					</ul>
 					<div class="tags">
 						<span class="tag">
-							<a href="https://www.python.org/">Python</a>
+							<a href="https://www.python.org/" target="_blank">Python</a>
 						</span>
 						<span class="tag">
-							<a href="https://www.handbook.unsw.edu.au/undergraduate/courses/2020/COMP3821">Programming Techniques</a>
+							<a href="https://www.handbook.unsw.edu.au/undergraduate/courses/2020/COMP3821" target="_blank">Programming Techniques</a>
 						</span>
 					</div>
 				</div>
@@ -300,8 +300,8 @@
 				<div class="card">
 					<h3>LeetCode</h3>
 					<h4 class="project-subheading">Competitive Programming</h4>
-					<a class="demo-link" href="https://leetcode.com/v-wong/">LeetCode Profile</a>
-					<a class="repo-link" href="https://github.com/V-Wong/LeetCode-Practice">Repository</a>
+					<a class="demo-link" href="https://leetcode.com/v-wong/" target="_blank">LeetCode Profile</a>
+					<a class="repo-link" href="https://github.com/V-Wong/LeetCode-Practice" target="_blank">Repository</a>
 					<ul>
 						<li>
 							Explained Python solutions to various problems.
@@ -315,10 +315,10 @@
 					</ul>
 					<div class="tags">
 						<span class="tag">
-							<a href="https://www.python.org/">Python</a>
+							<a href="https://www.python.org/" target="_blank">Python</a>
 						</span>
 						<span class="tag">
-							<a href="https://leetcode.com/">Problem Solving</a>
+							<a href="https://leetcode.com/" target="_blank">Problem Solving</a>
 						</span>
 					</div>
 				</div>
