--- a/index.html
+++ b/index.html
@@ -77,19 +77,20 @@
 					<div class="dotpoints">
 						<ul>
 							<li>
-								Centralised source of society events across Australian universities
-								such as UNSW, USyd and UniMelb.
+								Centralised source of events across Australian universities
+								including UNSW, USyd and UniMelb.
 							</li>
 							<li>
 								Helps students discover new societies and consequently allows societies
 								to gain exposure.
 							</li>
 							<li>
-								Development team consists of UNSW Computer Science 
-								and Software Engineering students.
+								Actively working with UNSW societies to better support student
+								academic and social life. 
 							</li>
 							<li>
-								Currently collborating with and expanding into other universities across Australia.
+								Development team consists of UNSW Computer Science 
+								and Software Engineering students.
 							</li>
 						</ul>
 					</div>
@@ -118,10 +119,10 @@
 						alt="2D rendering of a Rubiks cube">
 					<ul>
 						<li>
-							2D rendering of Rubik's cube with keyboard controls. 
+							Renders 2D Rubik's cube controlled with keypresses. 
 						</li>
 						<li>
-							Generates and performs solutions on any state of the cube.
+							Generates and runs solutions for any state of the cube.
 						</li>
 						<li>
 							Built in Python with Pygame for visuals and controls.
@@ -152,7 +153,7 @@
 							Generates a Huffman tree based on user symbol input.
 						</li>
 						<li>
-							Traceback of encoding path drawn when symbol is selected.
+							Draws encoding path when a symbol is selected.
 						</li>
 						<li>
 							Built in Javascript with HTML5 Canvas for visuals.
@@ -220,22 +221,22 @@
 							<b>Languages</b>: Javascript, Typescript, HTML, CSS.
 						</li>
 						<li>
-							<b>Frameworks and Libraries</b>: React, Bootstrap, HTML5 Canvas.
+							<b>Frameworks/Libraries</b>: React, Bootstrap, Canvas.
 						</li>
 						<li>
-							<b>Other</b>: Accessible + Responsive design, High performance.
+							<b>Other</b>: accessible and responsive design.
 						</li>
 					</ul>
 					<h4 class="project-subheading">Backend</h4>
 					<ul style="margin-top: 1vh;">
 						<li>
-							<b>Languages</b>: Python, Javascript, Typescript.
+							<b>Languages</b>: Python, Javascript, Typescript, SQL.
 						</li>
 						<li>
-							<b>Frameworks and Libraries</b>: Flask, Express.js, SocketIO.
+							<b>Frameworks/Libraries</b>: Flask, Express.js, SocketIO.
 						</li>
 						<li>
-							<b>Other</b>: SQL (PL/SQL), MongoDB.
+							<b>Other</b>: MongoDB, networking and databases.
 						</li>
 					</ul>
 				</div>
@@ -248,10 +249,10 @@
 							<b>C</b>: low level resource access for high performance programs.
 						</li>
 						<li>
-							<b>Regex</b>: using patterns to effectively operate on string data.
+							<b>Haskell</b>: mathematically structured functional programming.
 						</li>
 						<li>
-							<b>Perl</b>: integrating Regex with procedural features.
+							<b>Regex</b>: using patterns to effectively operate on string data.
 						</li>
 					</ul>
 					<h4 class="project-subheading">Project Management</h4>
