--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 							Explained Python solutions to various problems.
 						</li>
 						<li>
-							Solutions designed with efficiency and simplicity.
+							Designed solutions that are efficient and simple.
 						</li>
 						<li>
 							Documents my training in problem solving.
