--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 				</div>
 			</section>
 			<footer>
-				<p>Copyright © 2020 Vincent Wong</p>
+				<p>Thanks for reading :)</p>
 			</footer>
 		</div>
 	
