--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 		</div>
 	
 		<script>
-			const toggleDarkTheme = () => {
+			const toggleDarkTheme = (isDarkTheme) => {
 				document.body.classList.toggle("dark");
 				document.getElementsByClassName("profile")[0].classList.toggle("dark");
 				for (let element of document.querySelectorAll(".card, a")) {
@@ -349,7 +349,7 @@
 				let darkThemeToggleButton = document.getElementById("dark-theme-button");
 				let darkThemeButtonText = darkThemeToggleButton.children[1];
 				darkThemeToggleButton.addEventListener("click", () => {
-					toggleDarkTheme();
+					toggleDarkTheme(isDarkTheme);
 					isDarkTheme = !isDarkTheme;
 					sessionStorage.setItem("vwong-theme", isDarkTheme);
 				})
@@ -357,7 +357,7 @@
 
 			const isDarkTheme = sessionStorage.getItem("vwong-theme") === "true";
 			if (isDarkTheme) {
-				toggleDarkTheme();
+				toggleDarkTheme(isDarkTheme);
 			}
 
 			addDarkThemeToggler(isDarkTheme);
