--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 			gtag('config', 'UA-164616925-1');
 		</script>
 	
-		<title>Portfolio | Vincent Wong - Aspiring Web Developer</title>
-		<meta name="description" content="Aspiring full stack web developer based in Sydney, Australia.
+		<title>Portfolio | Vincent Wong - Full Stack Web Developer</title>
+		<meta name="description" content="Full stack web developer based in Sydney, Australia.
 										  Current student of Computer Science and Mathematics at UNSW.">
 
 		<meta name="author" content="Vincent Wong">
@@ -27,7 +27,7 @@
 		<div class="container">
 			<header class="profile">
 				<h1>Vincent Wong</h1>
-				<h2>Aspiring Full Stack Web Developer</h2>
+				<h2>Full Stack Web Developer</h2>
 				<nav class="links-container">
 					<div class="link-container">
 						<img src="./images/github.svg" alt="Black and white GitHub logo icon">
