Change section heading style

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				</blockquote>
 			</header>
 
-			<h2 class="section-heading">COLLABORATIVE PROJECTS</h2>
+			<h2 class="section-heading">Collaborative Projects</h2>
 			<hr>
 			<section class="single-column">
 				<div class="card">
@@ -108,7 +108,7 @@
 				</div>
 			</section>
 
-			<h2 class="section-heading">PERSONAL PROJECTS</h2>
+			<h2 class="section-heading">Personal Projects</h2>
 			<hr>
 			<section class="two-column">
 				<div class="card">
@@ -170,7 +170,7 @@
 				</div>
 			</section>
 
-			<h2 class="section-heading">EXTRACURRICULARS</h2>
+			<h2 class="section-heading">Extracurriculars</h2>
 			<hr>
 			<section class="single-column">
 				<div class="card">
@@ -210,7 +210,7 @@
 				</div>
 			</section>
 
-			<h2 class="section-heading">SKILLSET</h2>
+			<h2 class="section-heading">Skillset</h2>
 			<hr>
 			<section class="two-column">
 				<div class="card" style="padding-bottom: 2%;">
@@ -270,7 +270,7 @@
 				</div>
 			</section>
 
-			<h2 class="section-heading">ALGORITHMIC INTERESTS</h2>
+			<h2 class="section-heading">Algorithmic Interests</h2>
 			<hr>
 			<section class="two-column">
 				<div class="card">
