Update project descriptions

--- a/index.html
+++ b/index.html
@@ -119,10 +119,12 @@
 						alt="2D rendering of a Rubiks cube">
 					<ul>
 						<li>
-							Renders 2D Rubik's cube controlled with keypresses. 
+							Renders a two-dimensional Rubik's cube that can be controlled 
+							by the user with keyboard controls.
 						</li>
 						<li>
-							Generates and runs solutions for any state of the cube.
+							Generates solutions for any given state of the cube specified
+							by the user without cheating by reversing moves.
 						</li>
 						<li>
 							Built in Python with Pygame for visuals and controls.
@@ -150,10 +152,12 @@
 				   	>
 					<ul>
 						<li>
-							Generates a Huffman tree based on user symbol input.
+							Generates and renders a binary Huffman tree based on the user input of
+							symbol probabilities in a given sample text. 
 						</li>
 						<li>
-							Draws encoding path when a symbol is selected.
+							Draws the traceback encoding path for a certain symbol
+							when a specific symbol is selected by the user.
 						</li>
 						<li>
 							Built in Javascript with HTML5 Canvas for visuals.
@@ -279,13 +283,16 @@
 					<a class="repo-link" href="https://github.com/V-Wong/COMP3821" target="_blank">Repository</a>
 					<ul>
 						<li>
-							Explained implementations of algorithms in Python.
+							Explained  Python implementation of common algorithms.
 						</li>
 						<li>
-							Uses techniques such as dynamic programming.
+							Uses techniques from various paradigms of programming 
+							including divide and conquer, greedy method, linear programming
+							and dynamic programming.
 						</li>
 						<li>
-							Documents my studies in common algorithms.
+							Documents my studies in common algorithms from within
+							Computer Science and Mathematics.
 						</li>
 					</ul>
 					<div class="tags">
@@ -305,13 +312,15 @@
 					<a class="repo-link" href="https://github.com/V-Wong/LeetCode-Practice" target="_blank">Repository</a>
 					<ul>
 						<li>
-							Explained Python solutions to various problems.
+							Explained Python solutions to various LeetCode problems.
 						</li>
 						<li>
-							Designed solutions that are efficient and simple.
+							Includes a wide variety of problems involving common algorithms
+							and manipulation of common data structures such as graphs, trees and heaps.
 						</li>
 						<li>
-							Documents my training in problem solving.
+							Documents my practice in problem solving and ability
+							to write and explain code in simple language. 
 						</li>
 					</ul>
 					<div class="tags">
