Update project descriptions

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 							<b>Frameworks/Libraries</b>: React, Bootstrap, Canvas.
 						</li>
 						<li>
-							<b>Other</b>: accessible and responsive design.
+							<b>Other</b>: accessible, performant and responsive design.
 						</li>
 					</ul>
 					<h4 class="project-subheading">Backend</h4>
@@ -240,7 +240,7 @@
 							<b>Frameworks/Libraries</b>: Flask, Express.js, SocketIO.
 						</li>
 						<li>
-							<b>Other</b>: MongoDB, networking and databases.
+							<b>Other</b>: MongoDB, Heroku, Amazon Web Services.
 						</li>
 					</ul>
 				</div>
@@ -256,19 +256,19 @@
 							<b>Haskell</b>: mathematically structured functional programming.
 						</li>
 						<li>
-							<b>Regex</b>: using patterns to effectively operate on string data.
+							<b>R</b>: statistical computing for data science and analysis.
 						</li>
 					</ul>
-					<h4 class="project-subheading">Project Management</h4>
+					<h4 class="project-subheading">Software Engineering Tools</h4>
 					<ul style="margin-top: 1vh;">
 						<li>
 							<b>Git</b>: version control system for tracking code changes.
 						</li>
 						<li>
-							<b>GitHub</b>: Git hosting service for organising collaboration.
+							<b>Pytest</b>: unit testing framework for Python programs.
 						</li>
 						<li>
-							<b>Jira</b>: agile project management system for tracking progress.
+							<b>Hypothesis</b>: property based testing library for Python.
 						</li>
 					</ul>
 				</div>
@@ -287,12 +287,12 @@
 						</li>
 						<li>
 							Uses techniques from various paradigms of programming 
-							including divide and conquer, greedy method, linear programming
+							including brute force, divide and conquer, greedy method, linear programming
 							and dynamic programming.
 						</li>
 						<li>
 							Documents my studies in common algorithms from within
-							Computer Science and Mathematics.
+							the fields of Computer Science and Mathematics.
 						</li>
 					</ul>
 					<div class="tags">
@@ -316,11 +316,11 @@
 						</li>
 						<li>
 							Includes a wide variety of problems involving common algorithms
-							and manipulation of common data structures such as graphs, trees and heaps.
+							and manipulation of common data structures such as arrays, hashmaps, graphs, trees and heaps.
 						</li>
 						<li>
 							Documents my practice in problem solving and ability
-							to write and explain code in simple language. 
+							to write and explain code in easy and simple language. 
 						</li>
 					</ul>
 					<div class="tags">
