Add development tools section

--- a/index.html
+++ b/index.html
@@ -174,6 +174,64 @@
 				</div>
 			</section>
 
+			<h2 class="section-heading">Development Tools</h2>
+			<hr>
+			<section class="two-column">
+				<div class="card">
+					<h3>Full Stack Starter</h3>
+					<h4 class="project-subheading">Web Development Workflow Automator</h4>
+					<a class="repo-link" href="https://github.com/V-Wong/full-stack-starter" target="_blank">Repository</a>
+					<ul>
+						<li>
+							A portable set of tools to standardise and automate the creation of
+							full stack web development projects.
+						</li>
+						<li>
+							Creates a templated project with the necessary boilerplate code
+							and Git integration entirely from the command line.
+						</li>
+						<li>
+							Built in Perl and Shell to maximise portability on Linux.
+						</li>
+					</ul>
+					<div class="tags">
+						<span class="tag">
+							<a href="https://www.perl.org/" target="_blank">Perl</a>
+						</span>
+						<span class="tag">
+							<a href="https://en.wikipedia.org/wiki/Unix_shell" target="_blank">Shell</a>
+						</span>
+					</div>
+				</div>
+
+				<div class="card">
+					<h3>Reusable Components</h3>
+					<h4 class="project-subheading">Generic Cross Project React Components</h4>
+					<a class="repo-link" href="https://github.com/V-Wong/reusable-components" target="_blank">Repository</a>
+					<ul>
+						<li>
+							A set of common and simple generic React components designed
+							to be easily reused across different projects.
+						</li>
+						<li>
+							Simplifies the process of creating new user interfaces by modifying 
+							existing code rather than rewriting from scratch.
+						</li>
+						<li>
+							Written in Typescript with React-Bootstrap for styling.
+						</li>
+					</ul>
+					<div class="tags">
+						<span class="tag">
+							<a href="https://www.typescriptlang.org/" target="_blank">Typescript</a>
+						</span>
+						<span class="tag">
+							<a href="https://reactjs.org/" target="_blank">React</a>
+						</span>
+					</div>
+				</div>
+			</section>
+
 			<h2 class="section-heading">Extracurriculars</h2>
 			<hr>
 			<section class="single-column">
