Move extracurriculars section

--- a/index.html
+++ b/index.html
@@ -232,46 +232,6 @@
 				</div>
 			</section>
 
-			<h2 class="section-heading">Extracurriculars</h2>
-			<hr>
-			<section class="single-column">
-				<div class="card">
-					<div class="description">
-						<h3>UNSW Rubik Society</h3>
-						<h4 class="project-subheading">Executive - Events Director</h4>
-						<a class="demo-link" href="https://www.facebook.com/UNSWRubikSoc/" target="_blank">Society Page</a>
-					</div>
-					<div class="image-container">
-						<img class="image" src="./images/rubiksoc_small.webp" 
-							alt="Rubik's cube with UNSW logo embedded on the pieces">
-					</div>
-					<div class="dotpoints">
-						<ul>
-							<li>
-								Help organise Rubik's Cube tutorials and unofficial competitions at UNSW.
-							</li>
-							<li>
-								Encourage students to find an interest and hobby in speedcubing.
-							</li>
-							<li>
-								Help existing speedcubers to improve and optimise their solves.
-							</li>
-							<li>
-								Currently working with the World Cube Association to organise official competitions.
-							</li>
-						</ul>
-					</div>
-					<div class="tags">
-						<span class="tag">
-							<a href="https://www.rubiks.com/en-us/" target="_blank">Rubiks Cubes</a>
-						</span>
-						<span class="tag">
-							<a href="https://www.worldcubeassociation.org/" target="_blank">Speedcubing</a>
-						</span>
-					</div>
-				</div>
-			</section>
-
 			<h2 class="section-heading">Skillset</h2>
 			<hr>
 			<section class="two-column">
@@ -391,6 +351,47 @@
 					</div>
 				</div>
 			</section>
+
+			<h2 class="section-heading">Extracurriculars</h2>
+			<hr>
+			<section class="single-column">
+				<div class="card">
+					<div class="description">
+						<h3>UNSW Rubik Society</h3>
+						<h4 class="project-subheading">Executive - Events Director</h4>
+						<a class="demo-link" href="https://www.facebook.com/UNSWRubikSoc/" target="_blank">Society Page</a>
+					</div>
+					<div class="image-container">
+						<img class="image" src="./images/rubiksoc_small.webp" 
+							alt="Rubik's cube with UNSW logo embedded on the pieces">
+					</div>
+					<div class="dotpoints">
+						<ul>
+							<li>
+								Help organise Rubik's Cube tutorials and unofficial competitions at UNSW in Sydney.
+							</li>
+							<li>
+								Encourage students to find an interest and hobby in Rubik's Cubes and speedsolving.
+							</li>
+							<li>
+								Help existing speedcubers to improve and optimise their solves by hosting workshops.
+							</li>
+							<li>
+								Currently working with the World Cube Association to organise official competitions.
+							</li>
+						</ul>
+					</div>
+					<div class="tags">
+						<span class="tag">
+							<a href="https://www.rubiks.com/en-us/" target="_blank">Rubiks Cubes</a>
+						</span>
+						<span class="tag">
+							<a href="https://www.worldcubeassociation.org/" target="_blank">Speedcubing</a>
+						</span>
+					</div>
+				</div>
+			</section>
+
 			<footer>
 				<p>Thanks for reading :)</p>
 			</footer>
