Add speedcubing card

--- a/index.html
+++ b/index.html
@@ -390,6 +390,42 @@
 						</span>
 					</div>
 				</div>
+	
+				<div class="card" style="margin-top: 1.5%;">
+					<div class="description">
+						<h3>Competitive Rubik's Cube Speedsolver</h3>
+						<h4 class="project-subheading">Participant in WCA competitions</h4>
+						<a class="demo-link" href="https://www.worldcubeassociation.org/persons/2014WONG08" target="_blank">WCA Profile</a>
+					</div>
+					<div class="image-container">
+						<img class="image" src="./images/comp-cube.svg" 
+							alt="Rubik's cube with UNSW logo embedded on the pieces">
+					</div>
+					<div class="dotpoints">
+						<ul>
+							<li>
+								Actively participated in speedcubing competitions across Australia since 2014.
+							</li>
+							<li>
+								Held numerous Sydney and Australian national championship podium titles.
+							</li>
+							<li>
+								Held a former top 10 world ranking in one handed 3x3 Rubik's Cube solving.
+							</li>
+							<li>
+								Developed video resources to teach viewers solving techniques and how to improve.
+							</li>
+						</ul>
+					</div>
+					<div class="tags">
+						<span class="tag">
+							<a href="https://www.rubiks.com/en-us/" target="_blank">Rubiks Cubes</a>
+						</span>
+						<span class="tag">
+							<a href="https://www.worldcubeassociation.org/" target="_blank">Speedcubing</a>
+						</span>
+					</div>
+				</div>
 			</section>
 
 			<footer>
