--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						</li>
 						<li>
 							Generates solutions for any given state of the cube specified
-							by the user without cheating by reversing moves.
+							using the standard beginner's method.
 						</li>
 						<li>
 							Built in Python with Pygame for visuals and controls.
@@ -153,7 +153,7 @@
 					<ul>
 						<li>
 							Generates and renders a binary Huffman tree based on the user input of
-							symbol probabilities in a given sample text. 
+							symbol probabilities in a given text. 
 						</li>
 						<li>
 							Draws the traceback encoding path for a certain symbol
@@ -187,11 +187,11 @@
 							full stack web development projects.
 						</li>
 						<li>
-							Creates a templated project with the necessary boilerplate code
-							and Git integration entirely from the command line.
+							Creates a template project with the necessary files 
+							and workflow integration entirely from the command line.
 						</li>
 						<li>
-							Built in Perl and Shell to maximise portability on Linux.
+							Built in Perl and Shell while utilising the GitHub API.
 						</li>
 					</ul>
 					<div class="tags">
@@ -200,6 +200,9 @@
 						</span>
 						<span class="tag">
 							<a href="https://en.wikipedia.org/wiki/Unix_shell" target="_blank">Shell</a>
+						</span>
+						<span class="tag">
+							<a href="https://github.com/" target="_blank">GitHub</a>
 						</span>
 					</div>
 				</div>
@@ -214,8 +217,8 @@
 							to be easily reused across different projects.
 						</li>
 						<li>
-							Simplifies the process of creating new user interfaces by modifying 
-							existing code rather than rewriting from scratch.
+							Speeds up user interface development by modifying existing
+							components rather than rewriting from scratch.
 						</li>
 						<li>
 							Written in Typescript with React-Bootstrap for styling.
@@ -268,10 +271,10 @@
 					<h4 class="project-subheading">Languages</h4>
 					<ul style="margin-top: 1vh;">
 						<li>
-							<b>C</b>: low level resource access for high performance programs.
+							<b>C</b>: low level access for high performance programs.
 						</li>
 						<li>
-							<b>Haskell</b>: mathematically structured functional programming.
+							<b>Haskell</b>: mathematically based functional programming.
 						</li>
 						<li>
 							<b>R</b>: statistical computing for data science and analysis.
