Update project descriptions

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 					<a class="repo-link" href="https://github.com/V-Wong/COMP3821" target="_blank">Repository</a>
 					<ul>
 						<li>
-							Explained  Python implementation of common algorithms.
+							Python implementation of common algorithms.
 						</li>
 						<li>
 							Uses techniques from various paradigms of programming 
@@ -333,7 +333,7 @@
 					<a class="repo-link" href="https://github.com/V-Wong/LeetCode-Practice" target="_blank">Repository</a>
 					<ul>
 						<li>
-							Explained Python solutions to various LeetCode problems.
+							Python solutions to various LeetCode problems.
 						</li>
 						<li>
 							Includes a wide variety of problems involving common algorithms
