Update project descriptions

--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
 							Python implementation of common algorithms.
 						</li>
 						<li>
-							Uses techniques from various paradigms of programming 
-							including brute force, divide and conquer, greedy method, linear programming
+							Utilises techniques from various programming paradigms
+							such as brute force, divide and conquer, greedy method, linear 
 							and dynamic programming.
 						</li>
 						<li>
