Increase top margin on about-me section

--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
 						Interested in full stack web development and mobile app development.
 					</p>
 					<p>
-						Also avid <a href="https://www.worldcubeassociation.org/persons/2014WONG08" target="_blank">speedcuber</a> 
-						with Australian championship
-						<a href="https://www.worldcubeassociation.org/persons/2014wong08?tab=championship-podiums" target="_blank">podiums</a>.
+						Also avid speedcuber with Australian championship podiums.
 					</p>
 				</blockquote>
 			</header>
