--- a/index.html
+++ b/index.html
@@ -26,26 +26,28 @@
 	<body>
 		<div class="container">
 			<header class="profile">
+				<div class="top-bar">
 				<h1>Vincent Wong</h1>
 				<h2>Full Stack Web Developer</h2>
-				<nav class="links-container">
-					<div class="link-container">
-						<img src="./images/github.svg" alt="Black and white GitHub logo icon">
-						<a href="https://github.com/V-Wong" target="_blank">Github</a>
-					</div>
-					<div class="link-container">
-						<img src="./images/resume.svg" alt="Black and white icon with silhouette of person">
-						<a href="https://drive.google.com/file/d/1mqRF7QdBDXfDD7TLQ3OuanALxHxd_D2f/view?usp=sharing" target="_blank">Resume</a>
-					</div>
-					<div class="link-container">
-						<img src="./images/linkedin.svg" alt="Black and white LinkIn logo icon">
-						<a href="https://www.linkedin.com/in/vincent-wc-wong/" target="_blank">LinkedIn</a>
-					</div>
-					<div id="dark-theme-button" class="link-container">
-						<img src="./images/moon.svg" alt="Black and white moon icon">
-						<a>Dark</a>
-					</div>
-				</nav>
+					<nav class="links-container">
+						<div class="link-container">
+							<img src="./images/github.svg" alt="Black and white GitHub logo icon">
+							<a href="https://github.com/V-Wong" target="_blank">Github</a>
+						</div>
+						<div class="link-container">
+							<img src="./images/resume.svg" alt="Black and white icon with silhouette of person">
+							<a href="https://drive.google.com/file/d/1mqRF7QdBDXfDD7TLQ3OuanALxHxd_D2f/view?usp=sharing" target="_blank">Resume</a>
+						</div>
+						<div class="link-container">
+							<img src="./images/linkedin.svg" alt="Black and white LinkIn logo icon">
+							<a href="https://www.linkedin.com/in/vincent-wc-wong/" target="_blank">LinkedIn</a>
+						</div>
+						<div id="dark-theme-button" class="link-container">
+							<img src="./images/moon.svg" alt="Black and white moon icon">
+							<a>Dark</a>
+						</div>
+					</nav>
+				</div>
 				<blockquote class="about-me">
 					<p>
 						Computer Science and Mathematics student at UNSW in Sydney.
