--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 			gtag('config', 'UA-164616925-1');
 		</script>
 	
-		<title>Portfolio | Vincent Wong - Full Stack Web Developer</title>
-		<meta name="description" content="Full stack web developer based in Sydney, Australia.
+		<title>Portfolio | Vincent Wong - Full Stack Software Engineer</title>
+		<meta name="description" content="Full stack software engineer based in Sydney, Australia.
 										  Current student of Computer Science and Mathematics at UNSW.">
 
 		<meta name="author" content="Vincent Wong">
@@ -28,7 +28,7 @@
 			<header class="profile">
 				<div class="top-bar">
 				<h1>Vincent Wong</h1>
-				<h2>Full Stack Web Developer</h2>
+				<h2>Full Stack Software Engineer</h2>
 					<nav class="links-container">
 						<div class="link-container">
 							<img src="./images/github.svg" alt="Black and white GitHub logo icon">
@@ -50,13 +50,13 @@
 				</div>
 				<blockquote class="about-me">
 					<p>
-						Computer Science and Mathematics student at UNSW in Sydney.
+						Computer Science, Mathematics and Statistics student at UNSW in Sydney.
 					</p>
 					<p>
-						Interested in full stack web development and mobile app development.
+						Active in full stack web development and native mobile app development.
 					</p>
 					<p>
-						Also avid speedcuber with Australian championship podiums.
+						Interested in algorithms, theoretical computer science and pure maths.
 					</p>
 				</blockquote>
 			</header>
